# gene-conservation-network

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.opencode/plans/: 2026-03-07_analysis_plan.md
gene_conservation_network/: __init__.py  config.py  dataset.py  features.py  io.py  plots.py  schemas.py
gene_conservation_network/analysis/: correlation.py  hypotheses.py  visualization.py
gene_conservation_network/data/: coexpression.py  gene_ids.py  orthologs.py  species.py
gene_conservation_network/features/: network.py  ortholog_features.py
gene_conservation_network/modeling/: predict.py  train.py
notebooks/: 2026-01-19_access_coexpression_data.py  2026-03-01_Precision-Explanation.py  2026-03-08_Hypothesis-Evaluation.py
notebooks/__marimo__/session/: 2026-01-19_access_coexpression_data.py.json  2026-03-01_Precision-Explanation.py.json  2026-03-08_Hypothesis-Evaluation.py.json
params/: compute_features.yaml  extract_coxpresdb_data.yaml  extract_wormhole_data.yaml  transform_coxpresdb_data.yaml
scripts/: compute_network_features.py  compute_ortholog_features.py  extract_coxpresdb_data.py  extract_wormhole_data.py  merge_features.py  transform_coxpresdb_data.py
tests/: test_coexpression.py  test_correlation.py  test_data.py  test_gene_ids.py  test_hypotheses.py  test_io.py  test_network_features.py  test_ortholog_features.py  test_orthologs.py  test_species.py
